[gd_scene load_steps=11 format=3 uid="uid://c2hx651fm136q"]

[ext_resource type="Texture2D" uid="uid://c6ii3usdrgkha" path="res://Art/Sprout Lands - Sprites - premium pack/Tilesets/Building parts/door animation sprites.png" id="1_8gonl"]
[ext_resource type="Script" path="res://Scripts/door.gd" id="2_xf31d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_14emi"]
size = Vector2(16, 6)

[sub_resource type="Animation" id="Animation_cp8u7"]
resource_name = "Closed"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}

[sub_resource type="Animation" id="Animation_l4epq"]
resource_name = "Closing"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_pt2en"]
resource_name = "Opened"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_midoe"]
resource_name = "Opening"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 3, 2, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_urwwn"]
_data = {
"Closed": SubResource("Animation_cp8u7"),
"Closing": SubResource("Animation_l4epq"),
"Opened": SubResource("Animation_pt2en"),
"Opening": SubResource("Animation_midoe")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dnfvm"]
size = Vector2(2, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_616ga"]
size = Vector2(14, 30)

[node name="Door" type="Sprite2D"]
texture = ExtResource("1_8gonl")
hframes = 18
vframes = 2
frame = 5
script = ExtResource("2_xf31d")

[node name="Door_Body" type="StaticBody2D" parent="."]

[node name="closed_door_collision" type="CollisionShape2D" parent="Door_Body"]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_14emi")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Door_Body"]
libraries = {
"": SubResource("AnimationLibrary_urwwn")
}

[node name="opened_door_collision" type="CollisionShape2D" parent="Door_Body"]
position = Vector2(-7, 5)
shape = SubResource("RectangleShape2D_dnfvm")

[node name="opened_door_collision2" type="CollisionShape2D" parent="Door_Body"]
position = Vector2(7, 5)
shape = SubResource("RectangleShape2D_dnfvm")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_616ga")
debug_color = Color(0, 0.65098, 0.0352941, 0.419608)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
